test/e2e/conformance/tests/go-wasm-oauth-route-auth.yaml
# Copyright (c) 2022 Alibaba Group Holding Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/app-root: "/foo"
  name: wasmplugin-oauth
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
    - host: "foo.com"
      http:
        paths:
          - pathType: Prefix
            path: "/foo"
            backend:
              service:
                name: infra-backend-v1
                port:
                  number: 8080
---

apiVersion: extensions.higress.io/v1alpha1
kind: WasmPlugin
metadata:
  name: oauth
  namespace: higress-system
spec:
  defaultConfig:
    consumers:
      - name: consumer1
        client_id: 9515b564-0b1d-11ee-9c4c-00163e1250b5
        client_secret: 9e55de56-0b1d-11ee-b8ec-00163e1250b5
    issuer: Higress-Gateway
    auth_path: /oauth2/token
    global_credentials: false
    auth_header_name: Authorization
    token_ttl: 7200
    clock_skew_seconds: 3153600000
    keep_token: true

  matchRules:
      - ingress:
        - "higress-conformance-infra/wasmplugin-oauth"
        config:
          allow:
          - consumer1
  url: file:///opt/plugins/wasm-go/extensions/oauth/plugin.wasm
